# ros_utilities

./: .clang-format  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  jammy.lock.json  jammy.yaml  pyproject.toml
.configs/: mypy.ini  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
bdai_ros2_wrappers/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
bdai_ros2_wrappers/bdai_ros2_wrappers/: __init__.py  action.py  action_client.py  action_handle.py  action_server.py  callables.py  callback_groups.py  context.py  executors.py  feeds.py  filters.py  future.py  futures.py  logging.py  node.py  process.py  rosbag_recorder.py  scope.py  service.py  service_client.py  service_handle.py  single_goal_action_server.py  single_goal_multiple_action_servers.py  static_transform_broadcaster.py  subscription.py  tf_listener_wrapper.py  time.py  type_hints.py  utilities.py
bdai_ros2_wrappers/bdai_ros2_wrappers/launch/: actions.py  arguments.py  substitutions.py
bdai_ros2_wrappers/examples/: background_action_example.py  interruptible_talker_example.py  logs_to_ros_example.py  talker_example.py  talker_listener_example.py  tf_cli_example.py
bdai_ros2_wrappers/test/: conftest.py  test_action.py  test_action_client.py  test_action_handle.py  test_callables.py  test_context.py  test_executors.py  test_feeds.py  test_filters.py  test_futures.py  test_import.py  test_integration.py  test_logging.py  test_node.py  test_process.py  test_rosbag_recorder.py  test_service.py  test_service_client.py  test_service_handle.py  test_single_goal_action_server.py  test_single_goal_multiple_action_servers.py  test_static_transform_broadcaster.py  test_subscription.py  test_tf_listener_wrapper.py  test_utilities.py  test_wait_for_messages.py
bdai_ros2_wrappers/test/launch/: test_actions.py
bdai_ros2_wrappers/tests/: test_action_client.py  test_node.py  test_single_goal_action_server.py  test_single_goal_multiple_action_servers.py  test_tf_listener_wrapper.py
configs/: black.toml  mypy.ini  ruff.toml
proto2ros/: CMakeLists.txt  README.md  package.xml  proto2ros-extras.cmake  setup.cfg
proto2ros/cmake/: proto2ros_generate.cmake  proto2ros_vendor_package.cmake  rosidl_helpers.cmake
proto2ros/cmake/templates/: mypy.ini.in
proto2ros/include/proto2ros/: conversions.hpp
proto2ros/msg/: Any.msg  AnyProto.msg  Bytes.msg  List.msg  Struct.msg  StructEntry.msg  Value.msg
proto2ros/proto2ros/: compatibility.py  dependencies.py  equivalences.py  utilities.py
proto2ros/proto2ros/cli/: generate.py
proto2ros/proto2ros/configuration/: __init__.py  default.yaml
proto2ros/proto2ros/conversions/: __init__.py  basic.py
proto2ros/proto2ros/descriptors/: sources.py  types.py  utilities.py
proto2ros/proto2ros/output/: cpp.py  interfaces.py  python.py
proto2ros/proto2ros/output/templates/: conversions.cpp.jinja  conversions.hpp.jinja  conversions.py.jinja  specifications.py.jinja
proto2ros/src/: conversions.cpp
proto2ros_tests/: CMakeLists.txt  package.xml
proto2ros_tests/config/: overlay.yaml
proto2ros_tests/include/proto2ros_tests/: manual_conversions.hpp
proto2ros_tests/proto/: CMakeLists.txt  test.proto
proto2ros_tests/proto/bosdyn/api/: geometry.proto
proto2ros_tests/proto2ros_tests/: manual_conversions.py
proto2ros_tests/src/: manual_conversions.cpp
proto2ros_tests/test/: test_proto2ros.cpp  test_proto2ros.py
synchros2/: BUILD.bazel  CHANGELOG.rst  README.md  package.xml  rosdoc2.yaml  setup.cfg  setup.py
synchros2/docs/: ActionsWithSynchros2.md  GettingStartedGuide.md  TFTutorial.md  TimersAndCallbacksTutorial.md  build.sh  conf.py  index.rst
synchros2/docs/concepts/: actionable_serviced_apis.md  execution_and_callback_groups.md  index.md  logging_interop.md  message_feeds.md  process_wide_apis.md
synchros2/docs/faq/: index.md
synchros2/docs/getting_started/: index.md  installation.md  quickstart.md
synchros2/docs/guides/: effective_development.md  index.md  integration_testing.md  pytorch_interoperability.md  rclpy_migration.md
synchros2/docs/tutorials/: actions.md  index.md  tf.md  timers_and_callbacks.md
synchros2/examples/: background_action_example.py  interruptible_talker_example.py  logs_to_ros_example.py  talker_example.py  talker_listener_example.py  tf_cli_example.py  thread_affine_timer_example.py
synchros2/examples/synchros2_tutorials/: listener.py  msg_processor_cb.py  msg_processor_timer.py
synchros2/synchros2/: __init__.py  action.py  action_client.py  action_handle.py  callables.py  callback_groups.py  clock.py  context.py  executors.py  feeds.py  filters.py  futures.py  graph.py  logging.py  node.py  process.py  publisher.py  scope.py  service.py  service_handle.py  single_goal_action_server.py  single_goal_multiple_action_servers.py  static_transform_broadcaster.py  subscription.py  tf_listener_wrapper.py  time.py  type_hints.py  utilities.py
synchros2/synchros2/launch/: __init__.py  actions.py  arguments.py  substitutions.py  values.py
synchros2/test/: conftest.py  test_action.py  test_action_client.py  test_action_handle.py  test_callables.py  test_clock.py  test_context.py  test_executors.py  test_feeds.py  test_filters.py  test_futures.py  test_graph.py  test_integration.py  test_logging.py  test_node.py  test_process.py  test_publisher.py  test_service.py  test_service_handle.py  test_single_goal_action_server.py  test_single_goal_multiple_action_servers.py  test_static_transform_broadcaster.py  test_subscription.py  test_tf_listener_wrapper.py  test_utilities.py
synchros2/test/launch/: test_actions.py
synchros2_tutorials_example/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
synchros2_tutorials_example/synchros2_tutorials_example/: listener.py  msg_processor_cb.py  msg_processor_timer.py  tf_wrapper_example.py  uses_tf.py  wait_client.py  wait_server.py
synchros2_tutorials_interfaces_example/: CHANGELOG.rst  CMakeLists.txt  package.xml
synchros2_tutorials_interfaces_example/action/: Wait.action
(+59 files in other folders)
