<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bdai_ros2_wrappers</name>
  <version>0.0.1</version>
  <description>The AI Institute's wrappers for ROS2</description>
  <maintainer email="engineering@theaiinstitute.com">The AI Institute</maintainer>
  <license>MIT</license>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>example_interfaces</test_depend>
  <test_depend>python3-typing-extensions</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
