<?xml version="1.0"?>
<!--
Copyright (c) 2023 Boston Dynamics AI Institute LLC. All rights reserved.
-->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>proto2ros</name>
  <version>0.1.0</version>
  <description>Protobuf to ROS 2 interoperability interfaces</description>
  <maintainer email="engineering@theaiinstitute.com">BD AI Institute</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_export_depend>rosidl_default_generators</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_mypy</buildtool_export_depend>

  <exec_depend>protobuf</exec_depend>
  <exec_depend>protobuf-dev</exec_depend>
  <exec_depend>rosidl_adapter</exec_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>python3-inflection</exec_depend>
  <exec_depend>python3-jinja2</exec_depend>
  <exec_depend>python3-multipledispatch</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-networkx</exec_depend>
  <exec_depend>python3-protobuf</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
