<?xml version="1.0"?>
<!--
Copyright (c) 2023 Boston Dynamics AI Institute LLC. All rights reserved.
-->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>proto2ros_tests</name>
  <version>0.1.0</version>
  <description>Protobuf to ROS 2 interoperability interfaces tests</description>
  <maintainer email="engineering@theaiinstitute.com">BD AI Institute</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>clang-tidy</depend>

  <depend>protobuf</depend>
  <depend>protobuf-dev</depend>
  <depend>proto2ros</depend>

  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python3-jinja2</exec_depend>
  <exec_depend>python3-networkx</exec_depend>
  <exec_depend>python3-protobuf</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
