<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>synchros2</name>
  <version>1.0.0</version>
  <description>The AI Institute's wrappers for ROS2</description>
  <maintainer email="opensource@theaiinstitute.com">The AI Institute</maintainer>
  <license>MIT</license>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>

  <test_depend>example_interfaces</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-typing-extensions</test_depend>
  <test_depend>std_srvs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
