<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>synchros2</name>
  <version>1.0.3</version>
  <description>RAI Institute wrappers for ROS2</description>
  <maintainer email="opensource@rai-inst.com">RAI Institute</maintainer>
  <license>MIT</license>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <test_depend>example_interfaces</test_depend>
  <test_depend>python3-typing-extensions</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <rosdoc2>rosdoc2.yaml</rosdoc2>
  </export>
</package>
