<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>synchros2_tutorials_example</name>
  <version>1.0.2</version>
  <description>Code from the synchros2 tutorials</description>
  <maintainer email="opensource@rai-inst.com">RAI Institute</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>synchros2</depend>
  <depend>synchros2_tutorials_interfaces_example</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
